--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS Playground",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.ts"
   },
   "author": "Varun",
   "license": "MIT",
